old/src/tui/widgets/snapshots/patui__tui__widgets__text_display__tests__select_text2-3.snap
---
source: src/tui/widgets/text_display.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 50, height: 10 },
    content: [
        "┌──────────────────Block Title───────────────────┐",
        "│                                                ↑",
        "│  Hello, World!                                 ║",
        "│  Here's some selectable text 1                 █",
        "│  Hello, World!                                 █",
        "│  Here's some selectable text 2                 █",
        "│  Hello, World!                                 ║",
        "│  Here's some selectable text 3                 ║",
        "│                                                ↓",
        "└────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 2, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 16, y: 2, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 3, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 32, y: 3, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
    ]
}
